Fix /hupoxnet serving and add Babel dev dependency

--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "hupoxnetfrontend",
   "version": "0.1.0",
   "private": true,
+  "homepage": "/hupoxnet",
   "dependencies": {
     "@ant-design/compatible": "^5.1.2",
     "@ant-design/icons": "^5.2.6",
@@ -29,11 +30,14 @@
   },
   "scripts": {
     "start": "react-dotenv && react-scripts start",
-    "local": "serve -s build -l 3860",
+    "local": "serve -s build -l 3860 -c serve.json",
     "build": "react-dotenv && react-scripts build",
     "update": "git pull origin master && npm i && react-scripts build && react-dotenv && pm2 restart hupoxnetfrontend",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
+  },
+  "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11"
   },
   "eslintConfig": {
     "extends": [
