--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "start": "react-dotenv && react-scripts start",
     "local": "serve -s build -l 3860 -c serve.json",
     "build": "react-dotenv && react-scripts build",
+    "postbuild": "cp serve.json build/serve.json",
     "update": "git pull origin master && npm i && react-scripts build && react-dotenv && pm2 restart hupoxnetfrontend",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
