Align frontend serve config with tritikdb pattern

--- a/server.config.json
+++ b/server.config.json
@@ -4,7 +4,7 @@
       "name": "hupoxnetfrontend",
       "script": "npx",
       "interpreter": "none",
-      "args": "serve -s build -l 3860 -c serve.json",
+      "args": "serve -s build -l 3860",
       "env": {
         "NODE_ENV": "production"
       }
