--- a/package.json
+++ b/package.json
@@ -30,9 +30,8 @@
   },
   "scripts": {
     "start": "react-dotenv && react-scripts start",
-    "local": "serve -s build -l 3860 -c serve.json",
+    "local": "serve -s build -l 3860",
     "build": "react-dotenv && react-scripts build",
-    "postbuild": "cp serve.json build/serve.json",
     "update": "git pull origin master && npm i && react-scripts build && react-dotenv && pm2 restart hupoxnetfrontend",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
